4월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_Ireland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ireland_l_english.yml
@@ -236,7 +236,7 @@ ire.76.e:0 "Fantastic!"
 ire.77.t:0 "Irish Flirting with French Businesses"
 ire.77.d:0 "Surprisingly enough, the Irish have sent a trade envoy to Paris, with an offer for French businesses to set up shop in Dublin in exchange for healthy government incentives. Dublin is being promoted as a centre of trade and commerce. The Irish must be desperate if they've come to us of all people with such an offer. If we allow this, we will likely profit from it, but so too will our potential enemy across the English Channel."
 ire.77.a:0 "Ireland is no friend to the workers."
-ire.75.b:0 "We've made efforts to establish friendly relations with the Irish. Lets keep them."
+ire.77.b:0 "We've made efforts to establish friendly relations with the Irish. Lets keep them."
 ire.77.c:0 "Perhaps this is a chance to influence them from within. Let's do it."
 ire.77.e:0 "We're at war, we can't invest right now."
 ire.78.t:0 "The Commune Replies"
@@ -832,24 +832,24 @@ ire.183.t:0 "The Second Anglo-Irish Treaty"
 ire.183.d:0 "We have signed a treaty guaranteeing Irish neutrality. While they may not be allies, they shall not be enemies."
 ire.183.a:0 "Excellent!"
 ire.184.t:0 "End of the Trade War"
-ire.184.d:0 "Since the signing of the first Anglo-Irish Treaty in 1922 that established the Irish Free State within the British Empire there existed an economic conflict between the UK and Ireland. Tariffs were set at 20 percent to both imports and exports, as a means of hurting the nascent Irish state and as a protectionist measure to aid British business that was reeling from the loss of the Great War. The Irish responded in kind as a means of affirming their independence of Britain. The situation did not change as a result of the 1925 Revolution and establishment of the Union of Britain in a large part due to the ideological differences between the Unionists and Collins' Fine Gael. Now however, with the signing of the 2nd Anglo-Irish Treaty, the Trade War has come to an end and both parties are set to reap the economic benefits."
+ire.184.d:0 "Since the signing of the first Anglo-Irish Treaty in 1922 that established the Irish Free State within the British Empire there existed an economic conflict between the UK and Ireland. Tariffs were set at 20 percent to both imports and exports, as a means of hurting the nascent Irish state and as a protectionist measure to aid British business that was reeling from the loss of the Weltkrieg. The Irish responded in kind as a means of affirming their independence of Britain. The situation did not change as a result of the 1925 Revolution and establishment of the Union of Britain in a large part due to the ideological differences between the Unionists and Collins' Fine Gael. Now however, with the signing of the 2nd Anglo-Irish Treaty, the Trade War has come to an end and both parties are set to reap the economic benefits."
 ire.184.a:0 "Great!"
 ire.185.t:0 "End of the Trade War"
-ire.185.d:0 "Since the signing of the first Anglo-Irish Treaty in 1922 that established the Irish Free State within the British Empire there existed an economic conflict between the UK and Ireland. Tariffs were set at 20 percent to both imports and exports, as a means of hurting the nascent Irish state and as a protectionist measure to aid British business that was reeling from the loss of the Great War. The Irish responded in kind as a means of affirming their independence of Britain. The situation did not change as a result of the 1925 Revolution and establishment of the Union of Britain in a large part due to the ideological differences between the Unionists and Collins' Fine Gael. Now however, with the signing of the 2nd Anglo-Irish Treaty, the Trade War has come to an end and both parties are set to reap the economic benefits."
+ire.185.d:0 "Since the signing of the first Anglo-Irish Treaty in 1922 that established the Irish Free State within the British Empire there existed an economic conflict between the UK and Ireland. Tariffs were set at 20 percent to both imports and exports, as a means of hurting the nascent Irish state and as a protectionist measure to aid British business that was reeling from the loss of the Weltkrieg. The Irish responded in kind as a means of affirming their independence of Britain. The situation did not change as a result of the 1925 Revolution and establishment of the Union of Britain in a large part due to the ideological differences between the Unionists and Collins' Fine Gael. Now however, with the signing of the 2nd Anglo-Irish Treaty, the Trade War has come to an end and both parties are set to reap the economic benefits."
 ire.185.a:0 "Great!"
 ire.186.t:0 "Access Treaty with Ireland?"
 ire.186.d:0 "The Irish government has offered to give us military access, allowing us to base our navy and air force next to Britain, in exchange for a non-aggression pact and Germany guaranteeing their independence."
 ire.186.a:0 "A great deal!"
-ire.186.b:0 "It's not worth the trouble.."
+ire.186.b:0 "It's not worth the trouble..."
 ire.187.t:0 "Germany accepts our offer!"
 ire.187.d:0 "The Germans have guaranteed our independence in exchange for us allowing them to base their military here."
 ire.187.a:0 "Great!"
-ire.188.t:0 "Ireland in Mitteleuropa?"
+ire.188.t:0 "Ireland in the Reichspakt?"
 ire.188.d:0 "The Irish government has approached us asking to join our alliance. Doing so would give us both a base and a loyal ally next to Britain. How should we respond?"
 ire.188.a:0 "Jawohl!"
-ire.188.b:0 "It's not worth the trouble.."
+ire.188.b:0 "It's not worth the trouble..."
 ire.189.t:0 "The Germans accepted our request!"
-ire.189.d:0 "Germany accepted our request, we will now join Mitteleuropa, standing together against the Syndicalists."
+ire.189.d:0 "Germany accepted our request, we will now join the Reichspakt, standing together against the Syndicalists."
 ire.189.a:0 "Great!"
 ire.190.t:0 "The Germans rejected our request!"
 ire.190.d:0 "The Germans rejected our request, we will never trust them again!"
@@ -1662,9 +1662,9 @@ ire.236.a:0 "Great!"
 ire.237.t:0 "America and the Economy"
 ire.237.d:0 "With America stabilised and Ireland in a close friendship with them, our trade relations have become stronger and our economy has improved as a result."
 ire.237.a:0 "Great!"
-ire.238.t:0 "Ireland and Mitteleuropa"
-ire.238.d:0 "While trade relations have been strong between Ireland and Germany since Irish independence, Ireland still remained somewhat outside of the Mitteleuropan economy, preferring to stay neutral. With Ireland now having closer ties to Mitteleuropa the Irish economy has benefitted."
-ire.238.a:0 "Great!"
+ire.238.t:0 "Ireland and the Reichspakt"
+ire.238.d:0 "While trade relations have been strong between Ireland and Germany since Irish independence, Ireland still remained somewhat outside of the Reichspakt economy, preferring to stay neutral. With Ireland now having closer ties to the Reichspakt the Irish economy has benefitted."
+ire.238.a:0 "Great!""
 ire.239.t:0 "Black Monday ends!"
 ire.239.d:0 "Afer a long time and owing to the economic and diplomatic actions of our government, the Irish economy has finally recovered from Black Monday!"
 ire.239.a:0 "At last!"
