4월 업데이트&추가번역

--- a/Kaiserreich Korean Translation/localisation/KR_Japan_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Japan_l_english.yml
@@ -29,7 +29,7 @@ JAP_paternal_autocrat_party_long:0 "국민 동맹"
 JAP_national_populist_party_long:0 "동방회"
 
 ### Leader Descriptions ###
-POLITICS_HIROHITO_DESC:0 "히로히토 천황의 단기간의 통치 기간은 아직까지 일본에게 상대적으로 안정되고 경제적으로 회복된 시기였습니다. 무정부주의자들의 반란이 실패하고 일본의 이웃 국가들이 점점 더 약해지는 것처럼 보이는 가운데, 히로히토는 일본을 아시아에서는 전례 없는 패권의 시대로 더 멀리 나아가게 할 것입니다."
+POLITICS_HIROHITO_DESC:0 "Assuming the Crysanthemum throne after the death of his father, Emperor Taishō, His Imperial Majesty represents a divine dynasty of nearly 2,500 years; his personage seen not only as head of state, but as representative of the very heart, soul, and being of the nation. As both militarists and a resurgent left thrive amidst mounting domestic chaos, the Emperor remains silent, his role unclear and undecided. However, when and if the Emperor does make his move, it will no doubt be decisive."
 
 ### Ideas ###
 JAP_narrow_rail:0 "Kyōki Railways"
@@ -176,10 +176,10 @@ JAP_yokuseiha_POL_desc:0 "While supporting imperial restoration the Yokuseiha me
 JAP_yokuseiha_ECO:0 "시장 자유"
 JAP_yokuseiha_ECO_desc:0 "Keeping in line with their decentralised approach the Yokuseiha propose an economic plan consisting of minimal state intervention in the economy. While this would allow groups like the Zaibatsu to gain more power this policy will also endear the regime to them."
 JAP_yokuseiha_AGR:0 "식민지 투자"
-JAP_yokuseiha_AGR_desc:0 "In response to the agricultural crisis Japan faces the Yokuseiha faction proposes a program of settlement incentives in Japanese mainland colonies in China and elsewhere. By increasing agricultural input from abroad homeland economy could shift to other sectors and supply logistics would be improved."
+JAP_yokuseiha_AGR_desc:0 "In response to the agricultural crisis Japan faces the Yokuseiha faction proposes a programme of settlement incentives in Japanese mainland colonies in China and elsewhere. By increasing agricultural input from abroad homeland economy could shift to other sectors and supply logistics would be improved."
 JAP_kodoha:0 "황도파"
 JAP_kodoha_desc:0 "The Kodoha faction is made up of restorationist army generals and officers who wish to bring Japan back to its folkist roots and create a strong imperial power at the head of the state."
-JAP_kodoha_POL:0 "Imperial Power"
+JAP_kodoha_POL:0 "황실파"
 JAP_kodoha_POL_desc:0 "The Kodoha faction resists Konoe's efforts in creating a separate dictatorial power from the imperial court and instead wish to transfer ultimate power to the emperor in a form of absolutism where the Taisei Yokusankai is a subject of the emperor."
 JAP_kodoha_ECO:0 "국유화"
 JAP_kodoha_ECO_desc:0 "The Kodoha faction's economic plan involves nationalisation of the economy for a dedicated empire-oriented production. By establishing an institution for government control such nationalisation can begin."
@@ -189,9 +189,9 @@ JAP_kakushinha:0 "Kakushinha Faction"
 JAP_kakushinha_desc:0 "The Kakushinha, or reform faction, is led by prince Konoe and is mainly comprised of intellectuals and politicians and aims for a reconstruction of the Japanese political system with an absolute Taisei Yokusankai at the core of Japanese society."
 JAP_kakushinha_POL:0 "새로운 체계"
 JAP_kakushinha_POL_desc:0 "The political plan of the Kakushinha faction was to create a single centralised political body which will combine the executive, legislative and administrative powers of the Japanese empire. Despite heavy resistance the reformists' domination of the first convention allowed them to pull through with the reforms."
-JAP_kakushinha_ECO:0 "Bureaucratic Regulation"
+JAP_kakushinha_ECO:0 "관료주의적 규제"
 JAP_kakushinha_ECO_desc:0 "The Kakushinha faction's economic policy involves creating a bureaucratic system to regulate the economy as part of the Taisei Yokusankai."
-JAP_kakushinha_AGR:0 "Bureaucratic Agrarianism"
+JAP_kakushinha_AGR:0 "관료주의적 농민주의"
 JAP_kakushinha_AGR_desc:0 "The Kakushinha faction's solution to Japan's crumbling agricultural system is to create another bureaucratic institution to regulate land ownership in the empire."
 
 ### Focuses - Economic - Base ###
@@ -223,43 +223,43 @@ JAP_NAT_IND:0 "Nationalise Heavy Industry"
 JAP_NAT_IND_desc:0 "After the break up and nationalisation of the Zaibatsu we control most of the heavy industry in the country, but not all. Some companies are below Zaibatsu level in prominence but are still major firms. To achieve total state control, it will be necessary to nationalise them."
 
 ### Focuses - Economic - Bureaucratic ###
-JAP_BUR_ECO_1:0 "Bureaucratic Economy"
+JAP_BUR_ECO_1:0 "관료주의 경제"
 JAP_BUR_ECO_1_desc:0 "The government decided to reform the economy to be regulated by a bureaucratic structure designed to limit the Zaibatsu's power and increase government benefits."
-JAP_BUR_CAR_1:0 "Integration of Foreign Motor Subsidiaries"
-JAP_BUR_CAR_1_desc:0 "The Japanese auto market has always been dominated by American car makers causing a deep trade deficit. When the Second American Civil War broke out many American subsidiaries and knock-down plants in Japan lost contact with their parent companies and have been struggling to get parts for their assembly lines. MITI bureaucrats see this as a prime opportunity to assimilate these factories."
-JAP_BUR_CAR_2:0 "Regulating the Automotive Industry"
+JAP_BUR_CAR_1:0 "외국 자동차 회사 합병"
+JAP_BUR_CAR_1_desc:0 "The Japanese auto market has always been dominated by American car makers causing a deep trade deficit. When the Second American Civil War broke out many American companies and knock-down plants in Japan lost contact with their parent companies and have been struggling to get parts for their assembly lines. MITI bureaucrats see this as a prime opportunity to assimilate these factories."
+JAP_BUR_CAR_2:0 "자동차 산업 규제"
 JAP_BUR_CAR_2_desc:0 "Throughout the 1920's and 1930's Japanese domestic automotive production was too small to compete globally. To remedy this and enable domestic firms to compete with much bigger Western counterparts we can force a merger of our many small automotive firms into a few big businesses."
-JAP_BUR_OIL:0 "Reorganisation of The Oil Industry"
+JAP_BUR_OIL:0 "석유 산업 재편"
 JAP_BUR_OIL_desc:0 "With the country at war the oil industry has been subjected to greater bureaucratic supervision and forced to undergo a structural reorganisation under the MITI's guidance. To increase efficiency and productivity in the petroleum industry all small private petroleum firms in Japan have been ordered to join a single concern."
-JAP_BUR_TRAN:0 "The Central Railroad"
+JAP_BUR_TRAN:0 "중앙 철도"
 JAP_BUR_TRAN_desc:0 "Our continued push towards an efficient and productive society have led us to create the Central Railroad Plan - a series of new and modernised train lines in the home islands."
 
 ### Focuses - Economic - Colonisation ###
-JAP_COL_START:0 "Colonial Incentives"
+JAP_COL_START:0 "식민지 장려책"
 JAP_COL_START_desc:0 "In order to save our dying agrarian sector and further expand our economy we sorely need to invest in colonial projects. The Empire is Japan's future."
-JAP_COL_TAIWAN:0 "Increase Emigration To Taiwan"
+JAP_COL_TAIWAN:0 "대만 이민 증대"
 JAP_COL_TAIWAN_desc:0 "Taiwan, the richest and most prosperous colony in the Empire, promises limitless bounty to those that settle there. The government must begin to provide incentives for emigration, providing the means for farmers from depressed areas to travel."
-JAP_COL_KOREA:0 "Increase Emigration to Chōsen"
+JAP_COL_KOREA:0 "조선 이민 증대"
 JAP_COL_KOREA_desc:0 "The closest colony to the Home Islands, Chōsen has long been the aim of economic and cultural assimilation efforts, but the process will never be complete without further measures incentivizing Japanese settlement. Fortunately, the government can provide these incentives."
-JAP_COL_PORT:0 "Increase Emigration to Kwantung"
+JAP_COL_PORT:0 "관동 이민 확대"
 JAP_COL_PORT_desc:0 "Although the Kwantung Leased Territory was only officially granted to Japan for a period of 99 years, the city of Dairen and its surrounds make an excellent destination for Japanese settlers. The Government has every reason to provide further incentives, increasing emigration."
 
 ### Focuses - Economic - Land Reform Act ###
-JAP_NAT_AGR:0 "Start Land Reform Act"
+JAP_NAT_AGR:0 "토지 개혁법 시작"
 JAP_NAT_AGR_desc:0 "The Land Reform Act is designed to limit landlordism and provide farmland for poor farmers. It will enforce redistribution of all land owned by absentee landlords within the next four years. The landlords will receive state bonds in addition to the purchase price as compensation. This will be a great step towards ending the rural poverty that has plagued our nation for generations."
-JAP_NAT_AGR_1:0 "Extend The Land Reform Act"
-JAP_NAT_AGR_1_desc:0 "We must extend the land reform act to even further increase our industrialcapacity, but it will still take significant time and political effort."
-JAP_NAT_AGR_2:0 "Finish The Land Reform Act"
+JAP_NAT_AGR_1:0 "토지 개혁법 연장"
+JAP_NAT_AGR_1_desc:0 "We must extend the land reform act to even further increase our industrial capacity, but it will still take significant time and political effort."
+JAP_NAT_AGR_2:0 "토지 개혁법 마무리"
 JAP_NAT_AGR_2_desc:0 "The Land Reform Act is complete, this will substantially increase our industrial capacity."
-JAP_NAT_AGR_3:0 "Finish The Extended Land Reform Act"
+JAP_NAT_AGR_3:0 "연장된 토지 개혁법 마무리"
 JAP_NAT_AGR_3_desc:0 "The Extended Land Reform Act is finally complete, this will be a huge increase to our industrial capacity."
 
 ### Focuses - Economic - Land Adjustment Act ###
-JAP_BUR_AGR:0 "The Land Adjustment Act"
+JAP_BUR_AGR:0 "토지 조정법"
 JAP_BUR_AGR_desc:0 "The Agricultural Land Adjustment Act will establish a legal basis for tenant rights and will be the first step for government control of the agricultural sector. The Act will prohibit landlords to cancel or refuse to renew a contract unilaterally without due cause. The Act also grants local authorities the right to cite eminent domain and purchase uncultivated lands from landlords."
-JAP_BUR_RENT:0 "The Rent Control Act"
+JAP_BUR_RENT:0 "임대료 관리법"
 JAP_BUR_RENT_desc:0 "The Rent Control Act will be the next step in our takeover of agriculture. It will allow local authorities to implement rent controls and authorise prefecture governors to intervene in cases where the rent has been proven to be unreasonably high."
-JAP_BUR_LAND:0 "The Agricultural Land Control Act"
+JAP_BUR_LAND:0 "농지 관리법"
 JAP_BUR_LAND_desc:0 "Last year Japan suffered a tremendous drought and our food supply chain was nearly crippled. To prevent another disaster the Diet has created the ALCA which stipulates that conversion or trade of farmland for non-agricultural purposes must be approved by local authorities. This allows us to select what crops are planted, which secures a high production of staple foods."
 
 ### Focuses - Military - Base ###
@@ -317,49 +317,49 @@ JAP_MIL_DOC_MOB4:0 "압도적인 화력"
 JAP_MIL_DOC_MOB4_desc:0 "If we are to win a war quickly, as Obata believes we must, it can only be with overwhelming firepower."
 
 ### Focuses - Military - Naval ###
-JAP_MIL_naval_start:0 "Naval Reform"
+JAP_MIL_naval_start:0 "해군 개혁"
 JAP_MIL_naval_start_desc:0 "We can't just focus on our army, our navy needs reforming as well."
-JAP_MIL_MARINES:0 "Amphibious Focus"
+JAP_MIL_MARINES:0 "수륙 양용"
 JAP_MIL_MARINES_desc:0 "The Kaigun Tokubetsu Rikusentai are some of the most well-trained, hardened and loyal troops in the world. German, Dutch, Chinese and anyone else who dares to stand in their way will without a doubt end up rotting on their beaches."
-JAP_MIL_NAV_BASES:0 "Naval Expansion"
+JAP_MIL_NAV_BASES:0 "해군 확장"
 JAP_MIL_NAV_BASES_desc:0 "While our navy stands unchallenged in the Pacific, we could not hope to defeat the German navy in a drawn-out war. Our fleet needs to expand, rapidly."
-JAP_MIL_BIG_SHIPS:0 "Capital Ships"
+JAP_MIL_BIG_SHIPS:0 "주력함"
 JAP_MIL_BIG_SHIPS_desc:0 "We should focus on big, heavily armed and armoured capital ships. Battleships have always been reliable, and these floating fortresses can capture the public's imagination in a way aircraft carriers never will."
-JAP_MIL_VERY_BIG_SHIPS:0 "Okami Project"
+JAP_MIL_VERY_BIG_SHIPS:0 "오카미 작전"
 JAP_MIL_VERY_BIG_SHIPS_desc:0 "What sailors of old have often called sea monsters or Leviathans will soon pale before the great wolf-class super heavy battleship, the Okami! May we name the first one after our great God and Emperor, the Okami!"
 JAP_MIL_SMALL_SHIPS:0 "Screens"
 JAP_MIL_SMALL_SHIPS_desc:0 "No capital ship is stronger than its weakest destroyer. Without the protection of screening ships, no matter how powerful, our capital ships will end up sunk."
-JAP_MIL_SUBMARINES:0 "Submarine Focus"
+JAP_MIL_SUBMARINES:0 "잠수함"
 JAP_MIL_SUBMARINES_desc:0 "Hidden, like the ancient ninja, submarines can deliver deadly blows not only to enemy military vessels, but also to their shipping lanes. How to implement them is vocally discussed in the Imperial Navy Headquarters, but all agree that they will serve an important role in any upcoming conflicts."
-JAP_MIL_NAVBOM_FOCUS:0 "Naval Bombers"
-JAP_MIL_NAVBOM_FOCUS_desc:0 "Some of the staff of the IJAAS claim that the upcoming battles of the sea will not be won in the waves, but in the clouds. We should listen to them, ships are much more expensive than planes after all."
-JAP_MIL_CARRIER:0 "Carrier Effort"
+JAP_MIL_NAVBOM_FOCUS:0 "해군 폭격기"
+JAP_MIL_NAVBOM_FOCUS_desc:0 "Some of the staff of the IJAAS claim that the upcoming battles of the sea will not be won on the waves, but in the clouds. We should listen to them, ships are much more expensive than planes after all."
+JAP_MIL_CARRIER:0 "항공모함 중점"
 JAP_MIL_CARRIER_desc:0 "With highly modern naval bombers at our disposal we need to supply them with mobile airbases, in the form or aircraft carriers."
-JAP_MIL_NAV_DOC:0 "Naval Doctrines"
+JAP_MIL_NAV_DOC:0 "해군 교리"
 JAP_MIL_NAV_DOC_desc:0 "No fleet, no matter how large or modern, is more efficient than its tactics allow it to be. Our glorious victory at Tsushima stands testament to this."
 
 ### Focuses - Military - Air ###
-JAP_MIL_air_start:0 "Airforce Reform"
+JAP_MIL_air_start:0 "공군 개혁"
 JAP_MIL_air_start_desc:0 "We can't just focus on the ground, the Army and Navy Airforces need reforming as well."
-JAP_MIL_FIGHTER_FOCUS:0 "Fighter Focus"
+JAP_MIL_FIGHTER_FOCUS:0 "전투기"
 JAP_MIL_FIGHTER_FOCUS_desc:0 "Controlling the air means controlling the world! We must keep our fighters up to date to maintain our air superiority"
-JAP_MIL_BOMBER_FOCUS:0 "Bomber Focus"
+JAP_MIL_BOMBER_FOCUS:0 "폭격기"
 JAP_MIL_BOMBER_FOCUS_desc:0 "Japanese air power should be feared, and few as feared as our bomber pilots. With the most modern planes at our disposal, no nation or army can withstand us."
-JAP_MIL_air_zero:0 "Japanese Fighters"
+JAP_MIL_air_zero:0 "일본인 전투기 조종사"
 JAP_MIL_air_zero_desc:0 "Japanese fighter pilots know that agility is key to victory is the skies, and by making sure that is a design focus, we will improve our planes."
-JAP_MIL_air_doc:0 "Air Doctrines"
+JAP_MIL_air_doc:0 "공군 교리"
 JAP_MIL_air_doc_desc:0 "No airforce, no matter how large or modern, is more efficient than its tactics allow it to be."
-JAP_MIL_air_par:0 "Paratroopers"
+JAP_MIL_air_par:0 "공수부대"
 JAP_MIL_air_par_desc:0 "Rikusentai are like so many cherry blossoms floating on air. The risks paratroops face are severe, as they drift to the ground in full view of the enemy, but thorough training and an unwavering spirit will make these soldiers unstoppable."
-JAP_MIL_KAMIKAZE:0 "The Divine Wind"
+JAP_MIL_KAMIKAZE:0 "카미카제"
 JAP_MIL_KAMIKAZE_desc:0 "As the Imperial Rescript to Soldiers and Sailors states, 'Duty is as heavy as a mountain, death is lighter than a feather'. The purity of youth will usher in the Divine Wind."
-JAP_MIL_air_idea:0 "Samurai of the Skies"
+JAP_MIL_air_idea:0 "하늘의 사무라이"
 JAP_MIL_air_idea_desc:0 "Japanese fighter pilot training is some of the most difficult in the world, but it is that way for a very good reason. Our planes are fast, our ground crews skilled, and our commanders smart, but nothing is more important than the courage and talent of the individual pilots."
 
 ### Focuses - Military - Special ###
-JAP_MIL_NUC:0 "Project Hiroshima"
-JAP_MIL_NUC_desc:0 "Project Hiroshima, named so after the main research facility's location is Japan's secret military program attempting to harness the immense power that lies inside the atom."
-JAP_MIL_ROCKET:0 "Rocket Science"
+JAP_MIL_NUC:0 "히로시마 작전"
+JAP_MIL_NUC_desc:0 "Project Hiroshima, named so after the main research facility's location is Japan's secret military programme attempting to harness the immense power that lies inside the atom."
+JAP_MIL_ROCKET:0 "로켓 공학"
 JAP_MIL_ROCKET_desc:0 "Rocket developments can not only provide with rocket weaponry, but even, the scientists theorise, with rocket engines for high speed travel."
 
 ### Events ###
@@ -546,11 +546,11 @@ japdom.41.d:0 "The loss of Korea has destroyed the local Japanese community. Jap
 japdom.41.a:0 "Damn!"
 
 japdom.42.t:0 "Colonisation of Taiwan"
-japdom.42.d:0 "With millions of Japanese colonists settling in Taiwan, the Japanese authority has solidified its rule over the Island."
+japdom.42.d:0 "With thousands of Japanese colonists settling in Taiwan, the Japanese authority has solidified its rule over the Island."
 japdom.42.a:0 "Very good."
 
 japdom.43.t:0 "Economic Integration of Taiwan"
-japdom.43.d:0 "The millions of Japanese colonists in our protectorate of Taiwan seem to have found a permanent home. Urbanisation and modernisation of the territory is progressing daily, and the local economy has been overtaken and effectively integrated into the Japanese economy."
+japdom.43.d:0 "The thousands of Japanese colonists in our protectorate of Taiwan seem to have found a permanent home. Urbanisation and modernisation of the territory is progressing daily, and the local economy has been overtaken and effectively integrated into the Japanese economy."
 japdom.43.a:0 "Very Good!"
 
 japdom.44.t:0 "Loss of Taiwan"
@@ -558,7 +558,7 @@ japdom.44.d:0 "The loss of Taiwan has destroyed the local Japanese community. Ja
 japdom.44.a:0 "Damn!"
 
 japdom.73.t:0 "Colonisation of Dairen"
-japdom.73.d:0 "With millions of Japanese colonists settling in Dairen, the Japanese authority has solidified its rule over the peninsula."
+japdom.73.d:0 "With thousands of Japanese colonists settling in Dairen, the Japanese authority has solidified its rule over the peninsula."
 japdom.73.a:0 "Very good."
 
 japdom.45.t:0 "The Popular Front Incident"
