--- a/Kaiserreich Korean Translation/localisation/KR_Prewar_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Prewar_l_english.yml
@@ -86,7 +86,7 @@ prewar.25.t:0 "White terror in Switzerland"
 prewar.25.d:0 "The Swiss Federal Army and its repugnant reactionary volunteer auxiliaries have defeated the heroic defenders of Socialist revolution in the Romandy. As thousands stream across the border to seek asylum in France, French-speaking militiamen are executed after mock trials, while right-wing activists and bourgeois hunt down Socialists, Anarchists an Syndicalists, loot their homes and take gruesome revenge on their families. Such atrocities, reported by our state broadcasters, are causing an uproar in France and every true Syndicalist is now ready to free the Romandy from the clutches of Switzerland's bloodthirsty rulers. As our aircraft are ready to take off and strike against Swiss territory and our troops are concentrating near the border, the Comité de Salut Public has informed Bern that should the Romandy not be evacuated by the Swiss Federal Army and its control transferred to Communal authorities, war would be inevitable."
 prewar.25.a:0 "Ready the troops!"
 prewar.26.t:0 "알베르트 뒤푸르-페롱스 대사 암살"
-prewar.26.d:0 "우리의 주 오스트리아 대사 알베르트 뒤푸르-페롱스가 오늘 뮌헨의 자택에서 숨진 채 발견되었습니다. 귀스타브 부베라는 프랑스인 아나코생디칼리스트가 범인이라는 증거는 명백합니다. 부베는 흑해를 건너 조지아를 향할 계획으로 탑승한 베를린발 부쿠레슈티착 급행열차에서 발견되었습니다. 프랑스가 이를 계획했다는 증거는 없지만, 아무튼 이는 잔학 행위입니다."
+prewar.26.d:0 "알베르트 뒤푸르-페롱스 주오스트리아 대사가 오늘 뮌헨의 자택에서 숨진 채 발견되었습니다. 귀스타브 부베라는 프랑스인 아나코생디칼리스트가 범인이라는 증거는 명백합니다. 부베는 흑해를 건너 조지아를 향할 계획으로 탑승한 베를린발 부쿠레슈티착 급행열차에서 발견되었습니다. 프랑스가 이를 계획했다는 증거는 없지만, 아무튼 이는 잔학 행위입니다."
 prewar.26.a:0 "암살자의 처형으로 대중은 만족할 것이다."
 prewar.26.b:0 "이 무정부주의자들에 맞설 때다! 전쟁이다!"
 prewar.28.t:0 "전쟁 중인 브리튼 연방"
