4월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_Mongolia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Mongolia_l_english.yml
@@ -490,3 +490,7 @@ mongolia.49.t:0 "Mongol Demands"
 mongolia.49.d:0 "After centuries, the Mongol Khan now decided to demand Macau from us. The Mongol Empire is now one of the strongest states in the Far East and fighting them is probably not a good idea."
 mongolia.49.a:0 "We have no choice."
 mongolia.49.b:0 "They will have to fight for it!"
+mongolia.50.t:0 "Concessions For Peace?"
+mongolia.50.d:0 "The war with Fengtian has so far been unsuccessful, and our enemy now occupies Chahar. Many within our government urge peace, lest our nation be reduced to rubble. To that end, we can offer Fengtian control of Chahar and Suiyuan in exchange for peace."
+mongolia.50.a:0 "Make the offer."
+mongolia.50.b:0 "Chahar is Mongolian."
