4월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_New_England_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_New_England_l_english.yml
@@ -193,7 +193,7 @@ neeflavor.6.d:0 "Canada has released the state of New England to administer itse
 neeflavor.6.a:0 "Don't tread on me!"
 neeflavor.7.t:0 "New England Joins the Civil War"
 neeflavor.7.d:0 "The United States was still waging war with its enemies and the people in New England believed it was time to join the war on the side of the United States and bring victory for the Union. There were some in the minority that wanted to remain neutral and wait for the war to end."
-neeflavor.7.a:0 "War for the Union!"
+neeflavor.7.a:0 "We must aid the United States!"
 neeflavor.7.b:0 "Remain neutral"
 neeflavor.8.t:0 "The Civil War is Over"
 neeflavor.8.d:0 "The civil war is over and many of the people in New England wish to rejoin the Union but some believe that independence is the only answer for New England."
@@ -294,3 +294,16 @@ neeflavor.32.a:0 "보스턴에 온 것을 환영한다!"
 neeflavor.33.t:0 "왕실의 방문"
 neeflavor.33.d:0 "왕 겸 황제 에드워드 8세와 그의 아내인 오를레앙의 이사벨은 뉴잉글랜드와 캐나다 간의 관계가 개선되었음을 보여 주기 위해 오늘 보스턴에 도착했습니다. 현 영국 국왕이 보스턴을 방문한 것은 이번이 처음입니다. 뉴잉글랜드의 기쁨에 넘치는 많은 군중이 대영 제국의 왕과 왕비를 보기 위해 기꺼이 밖으로 나왔습니다. 방문은 단지 도시를 둘러보는 것 그 이상의 것이었는데, 그들은 또한 뉴잉글랜드에서 주목 받고 있는 다양한 지도자들과 정치에 대해 논의하기 위해 왔기 때문입니다."
 neeflavor.33.a:0 "보스턴에 온 것을 환영한다!"
+
+neeflavor.34.t:0 "Alliance with [From.GetName]?"
+neeflavor.34.d:0 "Somewhat surprisingly, it seems as though [From.GetName] is eager to join the Second American Civil War and fight alongside [Root.GetNameDef]. While they were traitorous in that they abandoned us during our darkest hour, it also seems as though this is a chance for their redemption. In addition, we have much to gain by strengthening our numbers. What say we?"
+neeflavor.34.a:0 "Yes, we need them"
+neeflavor.34.b:0 "Absolutely not"
+
+neeflavor.35.t:0 "[From.GetNameDefCap] Accepts!"
+neeflavor.35.d:0 "Thankfully, [From.GetNameDef] has seen fit to accept us into our alliance. We shall, then, leave the [CAN.GetAdjective]s and the [NFA.GetAdjective] to their business and join [From.GetNameDef] in their struggle against the traitors to the south."
+neeflavor.35.a:0 "To arms!"
+
+neeflavor.36.t:0 "[From.GetNameDefCap] Declines"
+neeflavor.36.d:0 "It seems as though [From.GetNameDef] has seen fit to reject us, stating that they will need no help with the destruction of their enemies. This has made those within our nation who were in favour of neutrality delighted, and has hurt the standing of the government with the general public, who see us as largely ineffective and unable to pursue our foreign policy goals."
+neeflavor.36.a:0 "Blasted [From.GetAdjective]s"
