--- a/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -2521,7 +2521,7 @@ NAM_GER_subject_ADJ:0 "남서아프리카"
 NAM_GER_subject_DEF:0 "남서아프리카"
 
 LBR_AUTHDEM_subject:0 "라이베리아 자치령"
-LBR_AUTHDEM_subject_ADJ:0 "L라이베리아"
+LBR_AUTHDEM_subject_ADJ:0 "라이베리아"
 LBR_AUTHDEM_subject_DEF:0 "라이베리아 자치령"
 
 KEN_GER_subject:0 "케냐"
@@ -3198,61 +3198,61 @@ DIETSMON_national_populist:0 "Dietschland"
 DIETSMON_national_populist_ADJ:0 "Dutch"
 DIETSMON_national_populist_DEF:0 "Dietschland"
 
-GUA_LIB_market_liberal:0 "Guatemala"
-GUA_LIB_market_liberal_ADJ:0 "Guatemalan"
-GUA_LIB_market_liberal_DEF:0 "Guatemala"
-GUA_LIB_national_populist:0 "Guatemala"
-GUA_LIB_national_populist_ADJ:0 "Guatemalan"
-GUA_LIB_national_populist_DEF:0 "Guatemala"
-GUA_LIB_paternal_autocrat:0 "Guatemala"
-GUA_LIB_paternal_autocrat_ADJ:0 "Guatemalan"
-GUA_LIB_paternal_autocrat_DEF:0 "Guatemala"
-GUA_LIB_radical_socialist:0 "Guatemala"
-GUA_LIB_radical_socialist_ADJ:0 "Guatemalan"
-GUA_LIB_radical_socialist_DEF:0 "Guatemala"
-GUA_LIB_social_conservative:0 "Guatemala"
-GUA_LIB_social_conservative_ADJ:0 "Guatemalan"
-GUA_LIB_social_conservative_DEF:0 "Guatemala"
-GUA_LIB_social_democrat:0 "Guatemala"
-GUA_LIB_social_democrat_ADJ:0 "Guatemalan"
-GUA_LIB_social_democrat_DEF:0 "Guatemala"
-GUA_LIB_social_liberal:0 "Guatemala"
-GUA_LIB_social_liberal_ADJ:0 "Guatemalan"
-GUA_LIB_social_liberal_DEF:0 "Guatemala"
-GUA_LIB_authoritarian_democrat:0 "Guatemala"
-GUA_LIB_authoritarian_democrat_ADJ:0 "Guatemalan"
-GUA_LIB_authoritarian_democrat_DEF:0 "Guatemala"
-GUA_LIB_totalist:0 "Guatemala"
-GUA_LIB_totalist_ADJ:0 "Guatemalan"
-GUA_LIB_totalist_DEF:0 "Guatemala"
+GUA_LIB_market_liberal:0 "과테말라"
+GUA_LIB_market_liberal_ADJ:0 "과테말라"
+GUA_LIB_market_liberal_DEF:0 "과테말라"
+GUA_LIB_national_populist:0 "과테말라"
+GUA_LIB_national_populist_ADJ:0 "과테말라"
+GUA_LIB_national_populist_DEF:0 "과테말라"
+GUA_LIB_paternal_autocrat:0 "과테말라"
+GUA_LIB_paternal_autocrat_ADJ:0 "과테말라"
+GUA_LIB_paternal_autocrat_DEF:0 "과테말라"
+GUA_LIB_radical_socialist:0 "과테말라"
+GUA_LIB_radical_socialist_ADJ:0 "과테말라"
+GUA_LIB_radical_socialist_DEF:0 "과테말라"
+GUA_LIB_social_conservative:0 "과테말라"
+GUA_LIB_social_conservative_ADJ:0 "과테말라"
+GUA_LIB_social_conservative_DEF:0 "과테말라"
+GUA_LIB_social_democrat:0 "과테말라"
+GUA_LIB_social_democrat_ADJ:0 "과테말라"
+GUA_LIB_social_democrat_DEF:0 "과테말라"
+GUA_LIB_social_liberal:0 "과테말라"
+GUA_LIB_social_liberal_ADJ:0 "과테말라"
+GUA_LIB_social_liberal_DEF:0 "과테말라"
+GUA_LIB_authoritarian_democrat:0 "과테말라"
+GUA_LIB_authoritarian_democrat_ADJ:0 "과테말라"
+GUA_LIB_authoritarian_democrat_DEF:0 "과테말라"
+GUA_LIB_totalist:0 "과테말라"
+GUA_LIB_totalist_ADJ:0 "과테말라"
+GUA_LIB_totalist_DEF:0 "과테말라"
 
-NIC_LIB_market_liberal:0 "Nicaragua"
-NIC_LIB_market_liberal_ADJ:0 "Nicaraguan"
-NIC_LIB_market_liberal_DEF:0 "Nicaragua"
-NIC_LIB_national_populist:0 "Nicaragua"
-NIC_LIB_national_populist_ADJ:0 "Nicaraguan"
-NIC_LIB_national_populist_DEF:0 "Nicaragua"
-NIC_LIB_paternal_autocrat:0 "Nicaragua"
-NIC_LIB_paternal_autocrat_ADJ:0 "Nicaraguan"
-NIC_LIB_paternal_autocrat_DEF:0 "Nicaragua"
-NIC_LIB_radical_socialist:0 "Nicaragua"
-NIC_LIB_radical_socialist_ADJ:0 "Nicaraguan"
-NIC_LIB_radical_socialist_DEF:0 "Nicaragua"
-NIC_LIB_social_conservative:0 "Nicaragua"
-NIC_LIB_social_conservative_ADJ:0 "Nicaraguan"
-NIC_LIB_social_conservative_DEF:0 "Nicaragua"
-NIC_LIB_social_democrat:0 "Nicaragua"
-NIC_LIB_social_democrat_ADJ:0 "Nicaraguan"
-NIC_LIB_social_democrat_DEF:0 "Nicaragua"
-NIC_LIB_social_liberal:0 "Nicaragua"
-NIC_LIB_social_liberal_ADJ:0 "Nicaraguan"
-NIC_LIB_social_liberal_DEF:0 "Nicaragua"
-NIC_LIB_authoritarian_democrat:0 "Nicaragua"
-NIC_LIB_authoritarian_democrat_ADJ:0 "Nicaraguan"
-NIC_LIB_authoritarian_democrat_DEF:0 "Nicaragua"
-NIC_LIB_totalist:0 "Nicaragua"
-NIC_LIB_totalist_ADJ:0 "Nicaraguan"
-NIC_LIB_totalist_DEF:0 "Nicaragua"
+NIC_LIB_market_liberal:0 "니카라과"
+NIC_LIB_market_liberal_ADJ:0 "니카라과"
+NIC_LIB_market_liberal_DEF:0 "니카라과"
+NIC_LIB_national_populist:0 "니카라과"
+NIC_LIB_national_populist_ADJ:0 "니카라과"
+NIC_LIB_national_populist_DEF:0 "니카라과"
+NIC_LIB_paternal_autocrat:0 "니카라과"
+NIC_LIB_paternal_autocrat_ADJ:0 "니카라과"
+NIC_LIB_paternal_autocrat_DEF:0 "니카라과"
+NIC_LIB_radical_socialist:0 "니카라과"
+NIC_LIB_radical_socialist_ADJ:0 "니카라과"
+NIC_LIB_radical_socialist_DEF:0 "니카라과"
+NIC_LIB_social_conservative:0 "니카라과"
+NIC_LIB_social_conservative_ADJ:0 "니카라과"
+NIC_LIB_social_conservative_DEF:0 "니카라과"
+NIC_LIB_social_democrat:0 "니카라과"
+NIC_LIB_social_democrat_ADJ:0 "니카라과"
+NIC_LIB_social_democrat_DEF:0 "니카라과"
+NIC_LIB_social_liberal:0 "니카라과"
+NIC_LIB_social_liberal_ADJ:0 "니카라과"
+NIC_LIB_social_liberal_DEF:0 "니카라과"
+NIC_LIB_authoritarian_democrat:0 "니카라과"
+NIC_LIB_authoritarian_democrat_ADJ:0 "니카라과"
+NIC_LIB_authoritarian_democrat_DEF:0 "니카라과"
+NIC_LIB_totalist:0 "니카라과"
+NIC_LIB_totalist_ADJ:0 "니카라과"
+NIC_LIB_totalist_DEF:0 "니카라과"
 
 
 mittelafrika_formed_authoritarian_democrat:0 "독일령 중앙아프리카"
@@ -3290,36 +3290,36 @@ RAS_ARB_national_populist:0 "라시드 아라비아"
 RAS_ARB_national_populist_ADJ:0 "아라비아"
 RAS_ARB_national_populist_DEF:0 "라시드 아라비아"
 
-EMI_PAR_totalist:0 "Parmese Commune"
-EMI_PAR_totalist_ADJ:0 "Parmese"
-EMI_PAR_totalist_DEF:0 "Parmese Commune"
-EMI_PAR_syndicalist:0 "Parmese Commune"
-EMI_PAR_syndicalist_ADJ:0 "Parmese"
-EMI_PAR_syndicalist_DEF:0 "Parmese Commune"
-EMI_PAR_radical_socialist:0 "Parmese Commune"
-EMI_PAR_radical_socialist_ADJ:0 "Parmese"
-EMI_PAR_radical_socialist_DEF:0 "Parmese Commune"
-EMI_PAR_social_democrat:0 "Parma"
-EMI_PAR_social_democrat_ADJ:0 "Parmese"
-EMI_PAR_social_democrat_DEF:0 "Parma"
-EMI_PAR_social_liberal:0 "Parma"
-EMI_PAR_social_liberal_ADJ:0 "Parmese"
-EMI_PAR_social_liberal_DEF:0 "Parma"
-EMI_PAR_market_liberal:0 "Parma"
-EMI_PAR_market_liberal_ADJ:0 "Parmese"
-EMI_PAR_market_liberal_DEF:0 "Parma"
-EMI_PAR_social_conservative:0 "Parma"
-EMI_PAR_social_conservative_ADJ:0 "Parmese"
-EMI_PAR_social_conservative_DEF:0 "Parma"
-EMI_PAR_authoritarian_democrat:0 "Parma"
-EMI_PAR_authoritarian_democrat_ADJ:0 "Parmese"
-EMI_PAR_authoritarian_democrat_DEF:0 "Parma"
-EMI_PAR_paternal_autocrat:0 "Parma"
-EMI_PAR_paternal_autocrat_ADJ:0 "Parmese"
-EMI_PAR_paternal_autocrat_DEF:0 "Parma"
-EMI_PAR_national_populist:0 "Parma"
-EMI_PAR_national_populist_ADJ:0 "Parmese"
-EMI_PAR_national_populist_DEF:0 "Parma"
+EMI_PAR_totalist:0 "파르마 코뮌"
+EMI_PAR_totalist_ADJ:0 "파르마"
+EMI_PAR_totalist_DEF:0 "파르마 코뮌"
+EMI_PAR_syndicalist:0 "파르마 코뮌"
+EMI_PAR_syndicalist_ADJ:0 "파르마"
+EMI_PAR_syndicalist_DEF:0 "파르마 코뮌"
+EMI_PAR_radical_socialist:0 "파르마 코뮌"
+EMI_PAR_radical_socialist_ADJ:0 "파르마"
+EMI_PAR_radical_socialist_DEF:0 "파르마 코뮌"
+EMI_PAR_social_democrat:0 "파르마"
+EMI_PAR_social_democrat_ADJ:0 "파르마"
+EMI_PAR_social_democrat_DEF:0 "파르마"
+EMI_PAR_social_liberal:0 "파르마"
+EMI_PAR_social_liberal_ADJ:0 "파르마"
+EMI_PAR_social_liberal_DEF:0 "파르마"
+EMI_PAR_market_liberal:0 "파르마"
+EMI_PAR_market_liberal_ADJ:0 "파르마"
+EMI_PAR_market_liberal_DEF:0 "파르마"
+EMI_PAR_social_conservative:0 "파르마"
+EMI_PAR_social_conservative_ADJ:0 "파르마"
+EMI_PAR_social_conservative_DEF:0 "파르마"
+EMI_PAR_authoritarian_democrat:0 "파르마"
+EMI_PAR_authoritarian_democrat_ADJ:0 "파르마"
+EMI_PAR_authoritarian_democrat_DEF:0 "파르마"
+EMI_PAR_paternal_autocrat:0 "파르마"
+EMI_PAR_paternal_autocrat_ADJ:0 "파르마"
+EMI_PAR_paternal_autocrat_DEF:0 "파르마"
+EMI_PAR_national_populist:0 "파르마"
+EMI_PAR_national_populist_ADJ:0 "파르마"
+EMI_PAR_national_populist_DEF:0 "파르마"
 
 ##############
 #Vanilla
